--- a/grid.html
+++ b/grid.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Grid Layout</title>
+    <style>
+        .container{
+            display: grid;
+            /* grid-template-columns: repeat(3 , 1fr); */
+            justify-content: space-between;
+            /* align-items: center; */
+            /* justify-items: center; */
+            grid-template-columns: 200px 200px 200px;
+        }
+        .item{
+            border: 1px solid indianred;
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 <body>
     <h2>This is Grid Layout</h2>
+    <div class="container">
+        <div class="item">Item No. 1</div>
+        <div class="item">Item No. 2</div>
+        <div class="item">Item No. 3</div>
+        <div class="item">Item No. 4</div>
+        <div class="item">Item No. 5</div>
+        <div class="item">Item No. 6</div>
+        <div class="item">Item No. 7</div>
+        <div class="item">Item No. 8</div>
+        <div class="item">Item No. 9</div>
+        <div class="item">Item No. 10</div>
+        <div class="item">Item No. 11</div>
+        <div class="item">Item No. 12</div>
+        <div class="item">Item No. 13</div>
+        <div class="item">Item No. 14</div>
+        <div class="item">Item No. 15</div>
+        <div class="item">Item No. 16</div>
+        <div class="item">Item No. 17</div>
+        <div class="item">Item No. 18</div>
+        <div class="item">Item No. 19</div>
+        <div class="item">Item No. 20</div>
+        <div class="item">Item No. 21</div>
+    </div>
 </body>
 </html>
