--- a/responsive-website.html
+++ b/responsive-website.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7 things to responsive</title>
     <style>
+        body{
+            max-width: 800px;
+            margin: 0 auto;
+            border: 2px double chocolate;
+        }
         h1{
             font-size: 10vw;
         }
@@ -21,6 +26,9 @@
     <section class="tiger">
         <h3>Tiger</h3>
         <img src="./images/tiger.jpg" alt="" sizes="" srcset="">
+    </section>
+    <section>
+        
     </section>
     <!-- 
         1. viewport meta Tag
