file adding to folder

--- a/responsive-website.html
+++ b/responsive-website.html
@@ -17,6 +17,15 @@
         .tiger img{
             width: 100%;
         }
+        .container-two{
+            display: flex;
+        }
+        .container-two .split{
+            width: 50%;
+        }
+        .split img{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +37,15 @@
         <img src="./images/tiger.jpg" alt="" sizes="" srcset="">
     </section>
     <section>
-        
+        <h2>Two Parts</h2>
+        <div class="container-two">
+            <div class="split">
+                <img src="./images/food.jpg" alt="" sizes="" srcset="">
+            </div>
+            <div class="split">
+                <img src="./images/tiger.jpg" alt="" sizes="" srcset="">
+            </div>
+        </div>
     </section>
     <!-- 
         1. viewport meta Tag
