file adding to folder

--- a/responsive-website.html
+++ b/responsive-website.html
@@ -26,6 +26,14 @@
         .split img{
             width: 100%;
         }
+        @media screen and (max-width: 576px) {
+            .container-two{
+                flex-direction: column;
+            }
+            .container-two .split{
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -52,7 +60,8 @@
         2. CSS Relative measurment units
         3. Responsive image(Fluid image)
         4. body max-width and Margin Auto
-        5. 
+        5. making Responsive split screen using Flex
+        
      -->
 </body>
 </html>
