--- a/responsive-website.html
+++ b/responsive-website.html
@@ -28,7 +28,7 @@
         }
         @media screen and (max-width: 576px) {
             .container-two{
-                flex-direction: column;
+                flex-direction: column-reverse;
             }
             .container-two .split{
                 width: 100%;
@@ -61,7 +61,7 @@
         3. Responsive image(Fluid image)
         4. body max-width and Margin Auto
         5. making Responsive split screen using Flex
-        
+
      -->
 </body>
 </html>
